# compilers

./: CMakeLists.txt
.github/workflows/: main.yml
samples/: mul.test  sum.test
sources/: CalcVisitor.cpp  SyntaxTree.h  SyntaxTreePrinter.cpp  SyntaxTreePrinter.h  Visitor.h  lexer.l  main.cpp  parser.y
